Ghost and old env remove

--- a/.env.example
+++ b/.env.example
@@ -28,21 +28,7 @@ DATA_MOUNT_PATH=/opt/lisa-discord
 # Use "dev" for development
 STAGING=prod
 # Additional services
-COMPOSE_PROFILES=monitor,site,admin
-
-# Ghost
-GHOST_URL=http://lisa.zero-team.pro
-GHOST_HOST=lisa.zero-team.pro
-# Optional for Let’s Encrypt companion
-GHOST_HOST_LE=lisa.zero-team.pro
-# Ghost mail
-GHOST_MAIL_FROM="Name <user@example.com>"
-GHOST_MAIL_HOST=example.com
-GHOST_MAIL_USER=user@example.com
-GHOST_MAIL_PASS=password
-
-# Ghost DB
-MYSQL_ROOT_PASSWORD=zeroPass
+COMPOSE_PROFILES=admin,monitor
 
 # Admin panel
 ADMIN_HOST=admin.lisa.zero-team.pro
