--- a/bot/package.json
+++ b/bot/package.json
@@ -29,6 +29,7 @@
     "amqplib": "^0.8.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "discord-cross-hosting": "^2.1.8",
     "discord-hybrid-sharding": "^1.4.3",
