--- a/bot/package.json
+++ b/bot/package.json
@@ -26,13 +26,12 @@
   "homepage": "https://github.com/SemperPeritus/lisa-discord-bot#readme",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@node-redis/json": "^1.0.2",
     "amqplib": "^0.8.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "discord-cross-hosting": "^2.1.8",
-    "discord-hybrid-sharding": "^1.4.3",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
