--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "lib": ["es2020", "dom"],
+    "lib": ["es2020"],
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
