--- a/admin/public/manifest.json
+++ b/admin/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#5865f2",
+  "theme_color": "#202225",
   "background_color": "#36393f"
 }
