--- a/admin/package.json
+++ b/admin/package.json
@@ -32,6 +32,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
