--- a/bot/package.json
+++ b/bot/package.json
@@ -10,7 +10,7 @@
     "start-bot-cluster": "node dist/cluster.js",
     "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.ts --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
-    "start-cluster": "run-s migrate start-bot-cluster",
+    "start-cluster": "run-s start-bot-cluster",
     "mig-gen": "npx sequelize-cli migration:generate --migrations-path src/migrations --name"
   },
   "engines": {
