Telegram minimal bot

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ OCR_SPACE_API_KEY="[Your OCR API key]"
 MAIN_CHANNEL_ID=000000000000000000
 RATER_HOST=http://rater
 
+# Telegram
+TELEGRAM_TOKEN="[Your Telegram bot token]"
+
 # Postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=9302
@@ -28,7 +31,7 @@ DATA_MOUNT_PATH=/opt/lisa-discord
 # Use "dev" for development
 STAGING=prod
 # Additional services
-COMPOSE_PROFILES=admin,monitor
+COMPOSE_PROFILES=admin,monitor,telegram
 
 # Admin panel
 ADMIN_HOST=admin.lisa.zero-team.pro
