--- a/bot/package.json
+++ b/bot/package.json
@@ -8,9 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-bot-gateway": "node dist/gateway.js",
     "start-bot-cluster": "node dist/cluster.js",
+    "start-bot-telegram": "node dist/telegram.js",
     "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.ts --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
+    "start-telegram": "run-s start-bot-telegram",
     "mig-gen": "npx sequelize-cli migration:generate --migrations-path src/migrations --name"
   },
   "engines": {
@@ -44,6 +46,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
+    "telegraf": "^4.7.0",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
   },
