--- a/admin/package.json
+++ b/admin/package.json
@@ -28,11 +28,13 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
