--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
+    "copy-to-clipboard": "^3.3.1",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "query-string": "^7.0.1",
