S3 and Telegram user avatar

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ OCR_SPACE_API_KEY="[Your OCR API key]"
 MAIN_CHANNEL_ID=000000000000000000
 RATER_HOST=http://rater
 
+# S3
+S3_ACCESS_KEY_ID=key
+S3_SECRET_ACCESS_KEY=secretKey
+S3_ENDPOINT=https://s3.timeweb.com
+S3_REGION=ru-1
+S3_BUCKET=bucketName
+
 # Telegram
 TELEGRAM_TOKEN="[Your Telegram bot token]"
 
