--- a/bot/package.json
+++ b/bot/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/SemperPeritus/lisa-discord-bot#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.72.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "@node-redis/json": "^1.0.2",
     "amqplib": "^0.8.0",
