--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.2.6",
+    "@mui/styles": "^5.6.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
