--- a/admin/package.json
+++ b/admin/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "is-hotkey": "^0.2.0",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "query-string": "^7.0.1",
@@ -37,11 +38,15 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
     "remark-gfm": "^3.0.1",
+    "slate": "^0.78.0",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.78.1",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
+    "@types/is-hotkey": "^0.1.7",
     "@wdio/cli": "^7.16.11",
     "@wdio/devtools-service": "^7.16.11",
     "@wdio/dot-reporter": "^7.16.11",
