--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ S3_SECRET_ACCESS_KEY=secretKey
 S3_ENDPOINT=https://s3.timeweb.com
 S3_REGION=ru-1
 S3_BUCKET=bucketName
+# Optional alternative domain for URL generation
+S3_PUBLIC=https://lisa.s3.zero-team.pro
 
 # Telegram
 TELEGRAM_TOKEN="[Your Telegram bot token]"
