--- a/bot/package.json
+++ b/bot/package.json
@@ -9,7 +9,7 @@
     "start-bot-gateway": "node dist/gateway.js",
     "start-bot-cluster": "node dist/cluster.js",
     "start-bot-telegram": "node dist/telegram.js",
-    "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.ts --migrations-path src/migrations",
+    "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.js --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
     "start-telegram": "run-s start-bot-telegram",
@@ -27,41 +27,41 @@
   },
   "homepage": "https://github.com/SemperPeritus/lisa-discord-bot#readme",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.72.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@aws-sdk/client-s3": "^3.183.0",
+    "@discordjs/rest": "^1.2.0",
     "@node-redis/json": "^1.0.2",
-    "amqplib": "^0.8.0",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.1",
+    "amqplib": "^0.10.3",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "discord.js": "^13.0.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "i18next": "^20.4.0",
+    "discord.js": "^14.5.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "i18next": "^21.9.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
-    "node-fetch": "^2.6.6",
-    "pg": "^8.7.1",
+    "node-fetch": "^2.6.7",
+    "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "redis": "^4.0.3",
+    "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.6.5",
-    "sequelize-typescript": "^2.1.0",
-    "telegraf": "^4.7.0",
-    "ts-node": "^10.2.0",
-    "typescript": "^4.3.5"
+    "sequelize": "^6.23.2",
+    "sequelize-typescript": "^2.1.3",
+    "telegraf": "^4.10.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^16.6.1",
-    "@types/sequelize": "^4.28.10",
-    "@types/validator": "^13.6.3",
+    "@types/node": "^18.8.0",
+    "@types/sequelize": "^4.28.14",
+    "@types/validator": "^13.7.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.2",
-    "pretty-quick": "^3.1.1",
-    "sequelize-cli": "^6.2.0"
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
+    "sequelize-cli": "^6.5.1"
   }
 }
