--- a/bot/package.json
+++ b/bot/package.json
@@ -48,6 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.23.2",
     "sequelize-typescript": "^2.1.3",
+    "slate": "^0.82.1",
     "telegraf": "^4.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
