Updates .env.example and Redis, creates rater DC profile

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,22 @@
+# Use "dev" for development
+STAGING=prod
+# Additional services
+COMPOSE_PROFILES=admin,rater,monitor,telegram
+# Use sequelize force option for PostgreSQL
+# DB_FORCE=true
+
+# Postgres and Redis data common path
+DATA_MOUNT_PATH=/opt/lisa
+
+# Discord
 DISCORD_TOKEN="[Your Discord bot token]"
 DISCORD_CLIENT_ID="[Your Discord OAuth2 Client ID]"
 DISCORD_CLIENT_SECRET="[Your Discord OAuth2 Client secret]"
-OCR_SPACE_API_KEY="[Your OCR API key]"
-# Channel for system messages any channel that always work
+# Channel for system messages
 MAIN_CHANNEL_ID=000000000000000000
+
+# Genshin Impact Raters
+OCR_SPACE_API_KEY="[Your OCR API key]"
 RATER_HOST=http://rater
 
 # S3
@@ -34,18 +47,10 @@ REDIS_PASSWORD=zeroPass
 # RabbitMQ
 RABBITMQ_URI=amqp://user:password@localhost:5672
 
-# Postgres, MariaDB and Ghost content common path
-DATA_MOUNT_PATH=/opt/lisa-discord
-
-# Use "dev" for development
-STAGING=prod
-# Additional services
-COMPOSE_PROFILES=admin,monitor,telegram
-
 # Admin panel
-ADMIN_HOST=admin.lisa.zero-team.pro
-ADMIN_HOST_LE=admin.lisa.zero-team.pro
+ADMIN_HOST=lisa.zero-team.pro
+ADMIN_HOST_LE=lisa.zero-team.pro
 
-# API (bot)
+# API (gateway)
 API_HOST=api.lisa.zero-team.pro
 API_HOST_LE=api.lisa.zero-team.pro
