--- a/bot/package.json
+++ b/bot/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-bot-gateway": "node dist/gateway.js",
-    "start-bot-cluster": "node dist/cluster.js",
-    "start-bot-telegram": "node dist/telegram.js",
+    "start-bot-gateway": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/gateway.js",
+    "start-bot-cluster": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/cluster.js",
+    "start-bot-telegram": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/telegram.js",
     "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.js --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
@@ -51,6 +51,7 @@
     "slate": "^0.82.1",
     "telegraf": "^4.10.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
