--- a/.env.example
+++ b/.env.example
@@ -22,10 +22,10 @@ RATER_HOST=http://rater
 # S3
 S3_ACCESS_KEY_ID=key
 S3_SECRET_ACCESS_KEY=secretKey
-S3_ENDPOINT=https://s3.timeweb.com
 S3_REGION=ru-1
 S3_BUCKET=bucketName
-# Optional alternative domain for URL generation
+# Fill at least one domain for URL generation
+S3_ENDPOINT=https://s3.timeweb.com
 S3_PUBLIC=https://lisa.s3.zero-team.pro
 
 # Telegram
