--- a/bot/package.json
+++ b/bot/package.json
@@ -13,7 +13,8 @@
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
     "start-telegram": "run-s start-bot-telegram",
-    "mig-gen": "npx sequelize-cli migration:generate --migrations-path src/migrations --name"
+    "mig-gen": "npx sequelize-cli migration:generate --migrations-path src/migrations --name",
+    "db:makemigrations": "./node_modules/sequelize-auto-migrations/bin/makemigration.js --migrations-path src/migrations --models-path dist/models"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -47,6 +48,7 @@
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.23.2",
+    "sequelize-auto-migrations": "github:scimonster/sequelize-auto-migrations#a063aa6535a3f580623581bf866cef2d609531ba",
     "sequelize-typescript": "^2.1.3",
     "slate": "^0.82.1",
     "telegraf": "^4.10.0",
