--- a/bot/package.json
+++ b/bot/package.json
@@ -39,6 +39,7 @@
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "got": "11.8.5",
     "i18next": "^21.9.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
@@ -48,7 +49,6 @@
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.23.2",
-    "sequelize-auto-migrations": "github:scimonster/sequelize-auto-migrations#a063aa6535a3f580623581bf866cef2d609531ba",
     "sequelize-typescript": "^2.1.3",
     "slate": "^0.82.1",
     "telegraf": "^4.10.0",
@@ -66,6 +66,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
+    "sequelize-auto-migrations": "github:scimonster/sequelize-auto-migrations#a063aa6535a3f580623581bf866cef2d609531ba",
     "sequelize-cli": "^6.5.1"
   }
 }
