Mastercard init and currency conversion API

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,11 @@ S3_PUBLIC=https://lisa.s3.zero-team.pro
 # Telegram
 TELEGRAM_TOKEN="[Your Telegram bot token]"
 
+# Mastercard
+MASTERCARD_NAME=lisa
+MASTERCARD_PASSWORD=securePass
+MASTERCARD_CONSUMER_KEY=long97SymbolKey
+
 # Postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=9302
