--- a/bot/package.json
+++ b/bot/package.json
@@ -42,8 +42,10 @@
     "got": "11.8.5",
     "i18next": "^21.9.2",
     "lodash": "^4.17.21",
+    "mastercard-oauth1-signer": "^1.1.6",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.7",
+    "node-forge": "^1.3.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.3.1",
@@ -61,6 +63,7 @@
     "@types/express": "^4.17.14",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.8.0",
+    "@types/node-forge": "^1.3.2",
     "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.7",
     "npm-run-all": "^4.1.5",
