--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ S3_PUBLIC=https://lisa.s3.zero-team.pro
 # Telegram
 TELEGRAM_TOKEN="[Your Telegram bot token]"
 
-# Mastercard
+# Mastercard (Legacy, not currently in use)
 MASTERCARD_NAME=lisa
 MASTERCARD_PASSWORD=securePass
 MASTERCARD_CONSUMER_KEY=long97SymbolKey
