--- a/bot/package.json
+++ b/bot/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.1",
   "license": "MIT",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-bot-gateway": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/gateway.js",
-    "start-bot-cluster": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/cluster.js",
-    "start-bot-telegram": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/telegram.js",
+    "start-bot-gateway": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/gateway.js",
+    "start-bot-cluster": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/cluster.js",
+    "start-bot-telegram": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/telegram.js",
     "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.js --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
@@ -44,8 +45,10 @@
     "lodash": "^4.17.21",
     "mastercard-oauth1-signer": "^1.1.6",
     "mime-types": "^2.1.35",
+    "module-alias": "^2.2.2",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
+    "p-map": "^6.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.3.1",
@@ -55,7 +58,6 @@
     "slate": "^0.82.1",
     "telegraf": "^4.10.0",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
