--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ES6",
     "moduleResolution": "node",
     "allowJs": true,
     "removeComments": true,
@@ -8,7 +8,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "lib": ["es2020", "dom"],
-    "target": "es6",
+    "target": "ES6",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./src",
@@ -17,6 +17,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/loader.js"],
   "exclude": ["node_modules", "dist"]
 }
