--- a/bot/package.json
+++ b/bot/package.json
@@ -10,7 +10,7 @@
     "start-bot-gateway": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/gateway.js",
     "start-bot-cluster": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/cluster.js",
     "start-bot-telegram": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/telegram.js",
-    "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.js --migrations-path src/migrations",
+    "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.cjs --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
     "start-telegram": "run-s start-bot-telegram",
