OpenAI initialize and ai command

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,9 @@ MASTERCARD_NAME=lisa
 MASTERCARD_PASSWORD=securePass
 MASTERCARD_CONSUMER_KEY=long97SymbolKey
 
+# OpenAI
+OPENAI_API_KEY=secretKey
+
 # Postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=9302
