--- a/bot/package.json
+++ b/bot/package.json
@@ -48,6 +48,7 @@
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
+    "openai": "^3.2.1",
     "p-map": "^6.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
