--- a/bot/package.json
+++ b/bot/package.json
@@ -69,10 +69,10 @@
     "@types/node-forge": "^1.3.2",
     "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.7",
+    "@zeroteam/sequelize-auto-migrations": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "sequelize-auto-migrations": "github:scimonster/sequelize-auto-migrations#a063aa6535a3f580623581bf866cef2d609531ba",
     "sequelize-cli": "^6.5.1"
   }
 }
