--- a/bot/package.json
+++ b/bot/package.json
@@ -18,7 +18,7 @@
     "db:makemigrations": "node  --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node ./node_modules/sequelize-auto-migrations/bin/makemigration.mjs --migrations-path src/migrations --models-path dist/models"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
@@ -29,18 +29,19 @@
   },
   "homepage": "https://github.com/zero-team-pro/lisa#readme",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.183.0",
+    "@aws-sdk/client-s3": "^3.344.0",
     "@discordjs/rest": "^1.2.0",
+    "@node-redis/client": "^1.0.6",
     "@node-redis/json": "^1.0.2",
     "amqplib": "^0.10.3",
-    "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "discord.js": "^14.5.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.3",
     "express": "^4.18.1",
-    "got": "11.8.5",
+    "got": "^11.8.6",
     "i18next": "^21.9.2",
     "lodash": "^4.17.21",
     "mastercard-oauth1-signer": "^1.1.6",
@@ -50,28 +51,28 @@
     "node-forge": "^1.3.1",
     "openai": "^3.2.1",
     "p-map": "^6.0.0",
-    "pg": "^8.8.0",
+    "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.23.2",
-    "sequelize-typescript": "^2.1.3",
+    "sequelize-typescript": "^2.1.5",
     "slate": "^0.82.1",
     "telegraf": "^4.10.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.14",
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^18.8.0",
+    "@types/node": "^18.16.16",
     "@types/node-forge": "^1.3.2",
     "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.7",
     "@zeroteam/sequelize-auto-migrations": "^1.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "sequelize-cli": "^6.5.1"
   }
