--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,8 @@ S3_PUBLIC=https://lisa.s3.zero-team.pro
 
 # Telegram
 TELEGRAM_TOKEN="[Your Telegram bot token]"
+TELEGRAM_WH_HOST=tg-wh.lisa.zero-team.pro
+TELEGRAM_WH_PORT=443
 
 # Mastercard (Legacy, not currently in use)
 MASTERCARD_NAME=lisa
