Remove MasterCard legacy

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ DISCORD_CLIENT_SECRET="[Your Discord OAuth2 Client secret]"
 # Channel for system messages
 MAIN_CHANNEL_ID=000000000000000000
 
+# Telegram
+TELEGRAM_TOKEN="[Your Telegram bot token]"
+TELEGRAM_WH_HOST=tg-wh.lisa.zero-team.pro
+TELEGRAM_WH_PORT=443
+
 # Genshin Impact Raters
 OCR_SPACE_API_KEY="[Your OCR API key]"
 RATER_HOST=http://rater
@@ -25,18 +30,8 @@ S3_SECRET_ACCESS_KEY=secretKey
 S3_REGION=ru-1
 S3_BUCKET=bucketName
 # Fill at least one domain for URL generation
-S3_ENDPOINT=https://s3.timeweb.com
+S3_PUBLIC=https://zero-team-lisa.s3.eu-central-1.amazonaws.com
 S3_PUBLIC=https://lisa.s3.zero-team.pro
-
-# Telegram
-TELEGRAM_TOKEN="[Your Telegram bot token]"
-TELEGRAM_WH_HOST=tg-wh.lisa.zero-team.pro
-TELEGRAM_WH_PORT=443
-
-# Mastercard (Legacy, not currently in use)
-MASTERCARD_NAME=lisa
-MASTERCARD_PASSWORD=securePass
-MASTERCARD_CONSUMER_KEY=long97SymbolKey
 
 # OpenAI
 OPENAI_API_KEY=secretKey
