--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "chart.js": "^4.3.0",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "is-hotkey": "^0.2.0",
@@ -30,6 +31,7 @@
     "node-sass": "^7.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.1",
     "react-redux": "^7.2.6",
