--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ POSTGRES_PORT=9302
 POSTGRES_USER=zero
 POSTGRES_PASSWORD=zeroPass
 POSTGRES_DB=lisa
+POSTGRES_UGID=1000:1000
 
 # Redis
 REDIS_HOST=redis
