--- a/bot/package.json
+++ b/bot/package.json
@@ -33,14 +33,14 @@
     "@discordjs/rest": "^1.2.0",
     "@node-redis/client": "^1.0.6",
     "@node-redis/json": "^1.0.2",
-    "amqplib": "^0.10.3",
+    "amqplib": "^0.10.4",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "discord.js": "^14.5.0",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.1.3",
-    "express": "^4.18.1",
+    "express": "^4.19.2",
     "got": "^11.8.6",
     "i18next": "^21.9.2",
     "lodash": "^4.17.21",
@@ -48,26 +48,24 @@
     "mime-types": "^2.1.35",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.7",
-    "node-forge": "^1.3.1",
     "openai": "^3.2.1",
     "p-map": "^6.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "redis": "^4.3.1",
+    "redis": "^4.6.14",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.23.2",
+    "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.5",
     "slate": "^0.82.1",
-    "telegraf": "^4.10.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "telegraf": "^4.16.3",
+    "ts-node": "^10.9.2",
+    "typescript": "5.4.5"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.8.2",
-    "@types/express": "^4.17.14",
+    "@types/amqplib": "^0.10.5",
+    "@types/express": "^4.17.21",
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^18.16.16",
-    "@types/node-forge": "^1.3.2",
+    "@types/node": "^18.19.39",
     "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.7",
     "@zeroteam/sequelize-auto-migrations": "^1.1.0",
