--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ES6",
+    "module": "ES2020",
     "moduleResolution": "node",
     "allowJs": true,
     "removeComments": true,
@@ -8,7 +8,8 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "lib": ["es2020", "dom"],
-    "target": "ES6",
+    "target": "ES2020",
+    "types": ["node"],
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./src",
