--- a/bot/package.json
+++ b/bot/package.json
@@ -52,6 +52,7 @@
     "p-map": "^6.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
+    "prom-client": "^15.1.3",
     "redis": "^4.6.14",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.37.3",
