--- a/bot/package.json
+++ b/bot/package.json
@@ -10,10 +10,12 @@
     "start-bot-gateway": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/gateway.js",
     "start-bot-cluster": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/cluster.js",
     "start-bot-telegram": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/telegram.js",
+    "start-bot-vm": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/vm.js",
     "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.cjs --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
     "start-telegram": "run-s start-bot-telegram",
+    "start-vm": "run-s start-bot-vm",
     "mig-gen": "npx sequelize-cli migration:generate --migrations-path src/migrations --name",
     "db:makemigrations": "node  --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node ./node_modules/sequelize-auto-migrations/bin/makemigration.mjs --migrations-path src/migrations --models-path dist/models"
   },
@@ -63,7 +65,8 @@
     "telegraf": "^4.16.3",
     "ts-node": "^10.9.2",
     "typescript": "5.4.5",
-    "url-value-parser": "^2.2.0"
+    "url-value-parser": "^2.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
@@ -71,6 +74,7 @@
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.19.39",
     "@types/sequelize": "^4.28.14",
+    "@types/uuid": "^10.0.0",
     "@types/validator": "^13.7.7",
     "@zeroteam/sequelize-auto-migrations": "^1.1.0",
     "npm-run-all": "^4.1.5",
