OpenAI Tools update

--- a/bot/package.json
+++ b/bot/package.json
@@ -12,6 +12,7 @@
     "start-bot-telegram": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/telegram.js",
     "start-bot-vm": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/vm.js",
     "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.cjs --migrations-path src/migrations",
+    "migrate-undo": "sequelize-cli db:migrate:undo --config src/configs/sequelize.cjs --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
     "start-cluster": "run-s start-bot-cluster",
     "start-telegram": "run-s start-bot-telegram",
@@ -45,6 +46,7 @@
     "express": "^4.19.2",
     "got": "^11.8.6",
     "i18next": "^21.9.2",
+    "js-tiktoken": "^1.0.12",
     "lodash": "^4.17.21",
     "mastercard-oauth1-signer": "^1.1.6",
     "mime-types": "^2.1.35",
