--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,7 @@ services:
     profiles: ['vm']
     volumes:
       - './.env:/app/.env:ro'
+      - '${DATA_MOUNT_PATH}/certs/:/certs:ro'
       - '${DATA_MOUNT_PATH}/vm/:/data'
       - '/var/run/docker.sock:/var/run/docker.sock'
     depends_on:
