--- a/bot/package.json
+++ b/bot/package.json
@@ -42,6 +42,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "discord.js": "^14.15.3",
+    "dockerode": "^4.0.2",
     "dotenv": "^16.1.3",
     "express": "^4.19.2",
     "got": "^11.8.6",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
+    "@types/dockerode": "^3.3.29",
     "@types/express": "^4.17.21",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.19.39",
