VM deployment fixes

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,13 @@ STAGING=prod
 COMPOSE_PROFILES=admin,rater,monitor,telegram
 # Use sequelize force option for PostgreSQL
 # DB_FORCE=true
+# Optional, change GID for `docker` group
+DOCKER_GID=988
 
-# Postgres and Redis data common path
+# Postgres, Redis and other data common path
 DATA_MOUNT_PATH=/opt/lisa
+# VM Services data path, optional (using DATA_MOUNT_PATH by fallback)
+DATA_MOUNT_PATH_VM_SERVICES=/mnt/vm-services
 
 # Discord
 DISCORD_TOKEN="[Your Discord bot token]"
