--- a/bot/package.json
+++ b/bot/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-bot-gateway": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/gateway.js",
-    "start-bot-cluster": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/cluster.js",
-    "start-bot-telegram": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/telegram.js",
-    "start-bot-vm": "node --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node dist/vm.js",
+    "start-bot-gateway": "node --loader ./src/loader.js --experimental-modules --import=extensionless/register dist/gateway.js",
+    "start-bot-cluster": "node --loader ./src/loader.js --experimental-modules --import=extensionless/register dist/cluster.js",
+    "start-bot-telegram": "node --loader ./src/loader.js --experimental-modules --import=extensionless/register dist/telegram.js",
+    "start-bot-vm": "node --loader ./src/loader.js --experimental-modules --import=extensionless/register dist/vm.js",
     "migrate": "sequelize-cli db:migrate --config src/configs/sequelize.cjs --migrations-path src/migrations",
     "migrate-undo": "sequelize-cli db:migrate:undo --config src/configs/sequelize.cjs --migrations-path src/migrations",
     "start-gateway": "run-s migrate start-bot-gateway",
@@ -18,10 +18,10 @@
     "start-telegram": "run-s start-bot-telegram",
     "start-vm": "run-s start-bot-vm",
     "mig-gen": "npx sequelize-cli migration:generate --migrations-path src/migrations --name",
-    "db:makemigrations": "node  --loader ./src/loader.js --experimental-modules --experimental-specifier-resolution=node ./node_modules/sequelize-auto-migrations/bin/makemigration.mjs --migrations-path src/migrations --models-path dist/models"
+    "db:makemigrations": "node  --loader ./src/loader.js --experimental-modules --import=extensionless/register ./node_modules/sequelize-auto-migrations/bin/makemigration.mjs --migrations-path src/migrations --models-path dist/models"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "repository": {
     "type": "git",
@@ -41,11 +41,13 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "discord.js": "^14.15.3",
     "dockerode": "^4.0.2",
     "dotenv": "^16.1.3",
     "express": "^4.19.2",
-    "got": "^11.8.6",
+    "extensionless": "^1.9.9",
+    "got": "^14.4.1",
     "i18next": "^21.9.2",
     "js-tiktoken": "^1.0.12",
     "lodash": "^4.17.21",
