--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.9'
 
 services:
-  bot-gateway:
-    container_name: 'lisa-bot-gateway'
+  gateway:
+    container_name: 'lisa-gateway'
     build: ./bot
     image: registry.zero-team.pro/lisa/bot:${TAG-latest}
     restart: always
@@ -58,8 +58,8 @@ services:
       - 'db'
       - 'redis'
 
-  bot-telegram-0:
-    container_name: 'lisa-bot-telegram-0'
+  telegram:
+    container_name: 'lisa-telegram'
     build: ./bot
     image: registry.zero-team.pro/lisa/bot:${TAG-latest}
     restart: always
@@ -95,21 +95,22 @@ services:
       - '${DATA_MOUNT_PATH}/vm/:/data'
       - '/var/run/docker.sock:/var/run/docker.sock'
     environment:
-      - API_HOST=bot-gateway
+      - API_HOST=gateway
     depends_on:
       - 'db'
       - 'redis'
-      - 'bot-gateway'
+      - 'gateway'
 
-  rater:
-    container_name: 'lisa-rater'
-    build: ./rater
-    image: registry.zero-team.pro/lisa/rater:${TAG-latest}
-    restart: always
-    env_file: .env
-    profiles: ['rater']
-    volumes:
-      - './.env:/app/.env:ro'
+  # DEPRECATED
+  # rater:
+  #   container_name: 'lisa-rater'
+  #   build: ./rater
+  #   image: registry.zero-team.pro/lisa/rater:${TAG-latest}
+  #   restart: always
+  #   env_file: .env
+  #   profiles: ['rater']
+  #   volumes:
+  #     - './.env:/app/.env:ro'
 
   db:
     container_name: 'lisa-postgresql'
@@ -171,7 +172,7 @@ services:
       - VIRTUAL_PORT=80
       - LETSENCRYPT_HOST=${ADMIN_HOST_LE}
     depends_on:
-      - 'bot-gateway'
+      - 'gateway'
 
 networks:
   default:
