--- a/admin/package.json
+++ b/admin/package.json
@@ -10,61 +10,61 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.2.6",
-    "@mui/styles": "^5.6.2",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "classnames": "^2.3.1",
-    "copy-to-clipboard": "^3.3.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@mui/styles": "^6.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
+    "classnames": "^2.5.1",
+    "copy-to-clipboard": "^3.3.3",
     "is-hotkey": "^0.2.0",
     "lodash": "^4.17.21",
-    "node-sass": "^7.0.1",
-    "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-markdown": "^8.0.1",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "react-toastify": "^8.1.1",
-    "remark-gfm": "^3.0.1",
-    "slate": "^0.78.0",
-    "slate-history": "^0.66.0",
-    "slate-react": "^0.78.1",
-    "typescript": "^4.5.4",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.0"
+    "node-sass": "^9.0.0",
+    "query-string": "^9.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "react-redux": "^9.1.2",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "remark-gfm": "^4.0.0",
+    "slate": "^0.103.0",
+    "slate-history": "^0.109.0",
+    "slate-react": "^0.110.1",
+    "typescript": "^5.6.2",
+    "universal-cookie": "^7.2.0",
+    "web-vitals": "^4.2.3"
   },
   "devDependencies": {
-    "@types/is-hotkey": "^0.1.7",
-    "@wdio/cli": "^7.16.11",
-    "@wdio/devtools-service": "^7.16.11",
-    "@wdio/dot-reporter": "^7.16.11",
-    "@wdio/local-runner": "^7.16.11",
-    "@wdio/mocha-framework": "^7.16.11",
-    "@wdio/spec-reporter": "^7.16.11",
-    "chromedriver": "^96.0.0",
-    "discord.js": "^13.0.1",
-    "prettier": "^2.5.1",
-    "react-app-rewired": "^2.1.11",
-    "selenium-webdriver": "^4.1.0",
-    "shelljs": "^0.8.4",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "wdio-chromedriver-service": "^7.2.2",
-    "wdio-docker-service": "^3.1.4",
-    "wdio-teamcity-reporter": "^3.0.2",
-    "webdriverio": "^7.16.11"
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/is-hotkey": "^0.1.10",
+    "@wdio/cli": "^9.0.9",
+    "@wdio/devtools-service": "^8.40.2",
+    "@wdio/dot-reporter": "^9.0.8",
+    "@wdio/local-runner": "^9.0.9",
+    "@wdio/mocha-framework": "^9.0.8",
+    "@wdio/spec-reporter": "^9.0.8",
+    "chromedriver": "^129.0.0",
+    "discord.js": "^14.16.2",
+    "prettier": "^3.3.3",
+    "react-app-rewired": "^2.2.1",
+    "selenium-webdriver": "^4.24.1",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "wdio-chromedriver-service": "^8.1.1",
+    "wdio-docker-service": "^3.2.1",
+    "wdio-teamcity-reporter": "^4.0.0",
+    "webdriverio": "^9.0.9"
   },
   "eslintConfig": {
     "extends": [
