--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2017",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["node", "webdriverio/async", "@wdio/mocha-framework", "expect-webdriverio", "@wdio/devtools-service"],
+    "types": ["node", "@wdio/mocha-framework", "expect-webdriverio", "@wdio/devtools-service"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
