--- a/admin/package.json
+++ b/admin/package.json
@@ -6,8 +6,7 @@
     "start": "BROWSER=none vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "wdio run wdio.conf.ts",
-    "jest": "jest"
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -25,7 +24,6 @@
     "copy-to-clipboard": "^3.3.3",
     "is-hotkey": "^0.2.0",
     "lodash": "^4.17.21",
-    "node-sass": "^9.0.0",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -45,30 +43,18 @@
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
+    "@svgr/plugin-svgo": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/is-hotkey": "^0.1.10",
-    "@wdio/cli": "^9.0.9",
-    "@wdio/devtools-service": "^8.40.2",
-    "@wdio/dot-reporter": "^9.0.8",
-    "@wdio/local-runner": "^9.0.9",
-    "@wdio/mocha-framework": "^9.0.8",
-    "@wdio/spec-reporter": "^9.0.8",
-    "chromedriver": "^129.0.0",
     "discord.js": "^14.16.2",
     "prettier": "^3.3.3",
-    "react-app-rewired": "^2.2.1",
     "sass-embedded": "^1.83.0",
-    "selenium-webdriver": "^4.24.1",
     "shelljs": "^0.8.5",
     "ts-node": "^10.9.2",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "vite-plugin-svgr": "^4.3.0",
-    "wdio-chromedriver-service": "^8.1.1",
-    "wdio-docker-service": "^3.2.1",
-    "wdio-teamcity-reporter": "^4.0.0",
-    "webdriverio": "^9.0.9"
+    "vite-plugin-svgr": "^4.3.0"
   },
   "eslintConfig": {
     "extends": [
