--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -2,14 +2,7 @@
   "compilerOptions": {
     "target": "es2022",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": [
-      "vite/client",
-      "vite-plugin-svgr/client",
-      "node",
-      "@wdio/mocha-framework",
-      "expect-webdriverio",
-      "@wdio/devtools-service"
-    ],
+    "types": ["vite/client", "vite-plugin-svgr/client", "node"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -25,6 +18,7 @@
     "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
+      "@/*": ["src/*"],
       "App/*": ["src/*"]
     }
   },
