--- a/admin/nginx.conf
+++ b/admin/nginx.conf
@@ -2,6 +2,35 @@ server {
     listen 80 default_server;
     server_name _;
 
+    gzip on;
+    gzip_static on;
+    gzip_http_version 1.1;
+    gzip_comp_level 6;
+    gzip_vary on;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_types
+        text/plain
+        text/css
+        text/html
+        text/javascript
+        text/xml
+        application/json
+        application/javascript
+        application/xml
+        application/xml+rss
+        image/gif
+        image/jpeg
+        image/avif
+        image/png
+        image/svg+xml
+        image/tiff
+        image/vnd.wap.wbmp
+        image/webp
+        image/x-icon
+        image/x-jng
+        image/x-ms-bmp;
+
     root /public;
 
     # Always serve index.html for any request
