--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   gateway:
     container_name: 'lisa-gateway'
@@ -18,8 +16,9 @@ services:
       - SHARD_COUNT=2
       - DB_FORCE=${DB_FORCE}
     depends_on:
-      - 'db'
-      - 'redis'
+      - db
+      - migrate
+      - redis
 
   bot-shard-0:
     container_name: 'lisa-bot-shard-0'
@@ -34,8 +33,9 @@ services:
       - SHARD_ID=0
       - SHARD_COUNT=2
     depends_on:
-      - 'db'
-      - 'redis'
+      - db
+      - migrate
+      - redis
 
   bot-shard-1:
     container_name: 'lisa-bot-shard-1'
@@ -50,8 +50,9 @@ services:
       - SHARD_ID=1
       - SHARD_COUNT=2
     depends_on:
-      - 'db'
-      - 'redis'
+      - db
+      - migrate
+      - redis
 
   telegram:
     container_name: 'lisa-telegram'
@@ -67,8 +68,9 @@ services:
       - './.env:/app/.env:ro'
       - '${DATA_MOUNT_PATH}/certs/:/certs:ro'
     depends_on:
-      - 'db'
-      - 'redis'
+      - db
+      - migrate
+      - redis
 
   vm-1:
     container_name: 'lisa-vm-1'
@@ -85,9 +87,10 @@ services:
     environment:
       - API_HOST=gateway
     depends_on:
-      - 'db'
-      - 'redis'
-      - 'gateway'
+      - db
+      - migrate
+      - redis
+      - gateway
 
   # DEPRECATED
   # rater:
@@ -111,6 +114,18 @@ services:
       - '9302:5432'
     volumes:
       - '${DATA_MOUNT_PATH}/postgres/:/var/lib/postgresql/data/'
+
+  migrate:
+    container_name: 'lisa-migrate'
+    build: ./db/migrate
+    image: registry.zero-team.pro/lisa/db-migrate:${TAG-latest}
+    restart: 'no'
+    environment:
+      - POSTGRES_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable&search_path=public
+    volumes:
+      - './bot/src/migrations:/db/migrations'
+    depends_on:
+      - db
 
   redis:
     container_name: 'lisa-redis'
@@ -156,7 +171,7 @@ services:
     volumes:
       - './admin/test/screenshots:/app/test/screenshots'
     depends_on:
-      - 'gateway'
+      - gateway
 
 networks:
   default:
