--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "cssVariables.lookupFiles": ["**/styles/*.scss"],
   "colorize.decoration_type": "underline",
   "colorize.colorized_variables": ["CSS", "SASS"],
   "colorize.include": ["**/styles/*.scss"],
-  "colorize.hide_current_line_decorations": false
+  "colorize.hide_current_line_decorations": false,
+  "prettier.prettierPath": "./bot/node_modules/prettier"
 }
