--- a/bot/package.json
+++ b/bot/package.json
@@ -84,7 +84,8 @@
     "@types/validator": "^13.7.7",
     "@zeroteam/sequelize-auto-migrations": "^1.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-sql": "^0.18.1",
     "pretty-quick": "^3.1.3",
     "sequelize-cli": "^6.5.1"
   }
