--- a/bot/package.json
+++ b/bot/package.json
@@ -32,61 +32,61 @@
   },
   "homepage": "https://github.com/zero-team-pro/lisa#readme",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.344.0",
-    "@discordjs/rest": "^1.2.0",
-    "@node-redis/client": "^1.0.6",
-    "@node-redis/json": "^1.0.2",
-    "amqplib": "^0.10.4",
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "cron": "^3.1.7",
-    "discord.js": "^14.15.3",
-    "dockerode": "^4.0.2",
-    "dotenv": "^16.1.3",
-    "express": "^4.19.2",
-    "extensionless": "^1.9.9",
-    "got": "^14.4.1",
-    "i18next": "^21.9.2",
-    "js-tiktoken": "^1.0.12",
-    "lodash": "^4.17.21",
-    "mastercard-oauth1-signer": "^1.1.6",
-    "mime-types": "^2.1.35",
-    "module-alias": "^2.2.2",
-    "node-fetch": "^2.6.7",
-    "openai": "^4.52.2",
-    "p-map": "^6.0.0",
-    "pg": "^8.11.0",
-    "pg-hstore": "^2.3.4",
-    "prom-client": "^15.1.3",
-    "redis": "^4.6.14",
-    "reflect-metadata": "^0.1.13",
-    "remark-parse": "^11.0.0",
-    "remark-stringify": "^11.0.0",
-    "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.5",
-    "slate": "^0.82.1",
-    "telegraf": "^4.16.3",
-    "ts-node": "^10.9.2",
+    "@aws-sdk/client-s3": "3.344.0",
+    "@discordjs/rest": "1.2.0",
+    "@node-redis/client": "1.0.6",
+    "@node-redis/json": "1.0.2",
+    "amqplib": "0.10.4",
+    "axios": "1.4.0",
+    "body-parser": "1.20.2",
+    "compression": "1.7.4",
+    "cors": "2.8.5",
+    "cron": "3.1.7",
+    "discord.js": "14.15.3",
+    "dockerode": "4.0.2",
+    "dotenv": "16.1.3",
+    "express": "4.19.2",
+    "extensionless": "1.9.9",
+    "got": "14.4.1",
+    "i18next": "21.9.2",
+    "js-tiktoken": "1.0.12",
+    "lodash": "4.17.21",
+    "mastercard-oauth1-signer": "1.1.6",
+    "mime-types": "2.1.35",
+    "module-alias": "2.2.2",
+    "node-fetch": "2.6.7",
+    "openai": "4.79.1",
+    "p-map": "6.0.0",
+    "pg": "8.11.0",
+    "pg-hstore": "2.3.4",
+    "prom-client": "15.1.3",
+    "redis": "4.6.14",
+    "reflect-metadata": "0.1.13",
+    "remark-parse": "11.0.0",
+    "remark-stringify": "11.0.0",
+    "sequelize": "6.37.3",
+    "sequelize-typescript": "2.1.5",
+    "slate": "0.82.1",
+    "telegraf": "4.16.3",
+    "ts-node": "10.9.2",
     "typescript": "5.4.5",
-    "url-value-parser": "^2.2.0",
-    "uuid": "^10.0.0"
+    "url-value-parser": "2.2.0",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.5",
-    "@types/dockerode": "^3.3.29",
-    "@types/express": "^4.17.21",
-    "@types/mime-types": "^2.1.1",
-    "@types/node": "^18.19.39",
-    "@types/sequelize": "^4.28.14",
-    "@types/uuid": "^10.0.0",
-    "@types/validator": "^13.7.7",
-    "@zeroteam/sequelize-auto-migrations": "^1.1.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.4.2",
-    "prettier-plugin-sql": "^0.18.1",
-    "pretty-quick": "^3.1.3",
-    "sequelize-cli": "^6.5.1"
+    "@types/amqplib": "0.10.5",
+    "@types/dockerode": "3.3.29",
+    "@types/express": "4.17.21",
+    "@types/mime-types": "2.1.1",
+    "@types/node": "18.19.39",
+    "@types/sequelize": "4.28.14",
+    "@types/uuid": "10.0.0",
+    "@types/validator": "13.7.7",
+    "@zeroteam/sequelize-auto-migrations": "1.1.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "3.4.2",
+    "prettier-plugin-sql": "0.18.1",
+    "pretty-quick": "3.1.3",
+    "sequelize-cli": "6.5.1"
   }
 }
