--- a/bot/package.json
+++ b/bot/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config=jest.config.js",
+    "test-ci": "CI=1 jest --config=jest.config.js",
     "start-bot-gateway": "node --loader ./src/loader.js --experimental-modules --import=extensionless/register dist/gateway.js",
     "start-bot-cluster": "node --loader ./src/loader.js --experimental-modules --import=extensionless/register dist/cluster.js",
     "start-bot-telegram": "node --loader ./src/loader.js --experimental-modules --import=extensionless/register dist/telegram.js",
@@ -74,6 +75,7 @@
     "uuid": "10.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.5",
     "@types/amqplib": "0.10.5",
     "@types/dockerode": "3.3.29",
     "@types/express": "4.17.21",
@@ -83,10 +85,14 @@
     "@types/uuid": "10.0.0",
     "@types/validator": "13.7.7",
     "@zeroteam/sequelize-auto-migrations": "1.1.0",
+    "cross-env": "^10.0.0",
+    "jest": "^30.0.5",
+    "jest-teamcity": "^1.12.0",
     "npm-run-all": "4.1.5",
     "prettier": "3.4.2",
     "prettier-plugin-sql": "0.18.1",
     "pretty-quick": "3.1.3",
-    "sequelize-cli": "6.5.1"
+    "sequelize-cli": "6.5.1",
+    "ts-jest": "^29.4.1"
   }
 }
