--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -20,6 +20,6 @@
       "got": ["./node_modules/got/dist/source"]
     }
   },
-  "include": ["src/**/*", "src/loader.js"],
+  "include": ["src/**/*", "src/loader.mjs", "src/preloader.mjs"],
   "exclude": ["node_modules", "dist"]
 }
