--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - './bot/coverage:/app/coverage'
       - '${DATA_MOUNT_PATH}/certs/:/certs:ro'
     environment:
-      - SHARD_COUNT=2
+      - SHARD_COUNT=1
       - DB_FORCE=${DB_FORCE}
     depends_on:
       - db
@@ -32,28 +32,28 @@ services:
       - '${DATA_MOUNT_PATH}/certs/:/certs:ro'
     environment:
       - SHARD_ID=0
-      - SHARD_COUNT=2
+      - SHARD_COUNT=1
     depends_on:
       - db
       - migrate
       - redis
 
-  bot-shard-1:
-    container_name: 'lisa-bot-shard-1'
-    image: registry.zero-team.pro/lisa/bot:${TAG-latest}
-    restart: always
-    env_file: .env
-    command: 'yarn run start-cluster'
-    volumes:
-      - './.env:/app/.env:ro'
-      - '${DATA_MOUNT_PATH}/certs/:/certs:ro'
-    environment:
-      - SHARD_ID=1
-      - SHARD_COUNT=2
-    depends_on:
-      - db
-      - migrate
-      - redis
+  # bot-shard-1:
+  #   container_name: 'lisa-bot-shard-1'
+  #   image: registry.zero-team.pro/lisa/bot:${TAG-latest}
+  #   restart: always
+  #   env_file: .env
+  #   command: 'yarn run start-cluster'
+  #   volumes:
+  #     - './.env:/app/.env:ro'
+  #     - '${DATA_MOUNT_PATH}/certs/:/certs:ro'
+  #   environment:
+  #     - SHARD_ID=1
+  #     - SHARD_COUNT=2
+  #   depends_on:
+  #     - db
+  #     - migrate
+  #     - redis
 
   telegram:
     container_name: 'lisa-telegram'
